--- a/app/src/main/res/layout/item_daily.xml
+++ b/app/src/main/res/layout/item_daily.xml
@@ -163,7 +163,7 @@
                 android:src="@drawable/ic_baseline_arrow_circle_down_24" />
 
             <TextView
-                android:id="@+id/userName"
+                android:id="@+id/getTime"
                 android:layout_width="wrap_content"
 
                 android:layout_height="wrap_content"
