--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -4,12 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
-    android:gravity="bottom"
+    android:gravity="top|start"
     android:orientation="horizontal"
-
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
@@ -17,7 +14,7 @@
         android:layout_width="95dp"
         android:layout_height="95dp"
         android:contentDescription="@string/nav_header_desc"
-        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
         app:srcCompat="@drawable/ico1" />
 
     <TextView
@@ -27,11 +24,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginBottom="5dp"
         android:padding="15dp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/white"
         android:textSize="22sp" />
-
-
 </LinearLayout>
