--- a/app/src/main/res/layout/fragment_mydevice.xml
+++ b/app/src/main/res/layout/fragment_mydevice.xml
@@ -6,21 +6,23 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="100dp"
+        android:layout_width="200dp"
         android:layout_height="100dp"
-        android:src="@mipmap/ic_launcher_foreground"
+        android:src="@drawable/checkme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.34" />
+        app:layout_constraintVertical_bias="0.14" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/text"
+        android:gravity="center"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="Checkme FDA"
+        android:lineSpacingExtra="7dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
