--- a/app/src/main/res/layout/item_ped.xml
+++ b/app/src/main/res/layout/item_ped.xml
@@ -24,7 +24,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" steps"
+            android:text="@string/steps"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text=" km"
+            android:text="@string/km"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text=" km/h"
+            android:text="@string/km_h"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
@@ -81,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="kcal"
+            android:text="@string/kcal"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
@@ -89,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:text="Fat(g):"
+            android:text="@string/fat_g"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
@@ -113,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text=" min"
+            android:text="@string/min"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
