--- a/app/src/main/res/layout/item_ble.xml
+++ b/app/src/main/res/layout/item_ble.xml
@@ -15,6 +15,7 @@
         app:cardCornerRadius="30dp">
 
         <TextView
+            android:padding="10dp"
             android:id="@+id/ble_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
