--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,35 +7,35 @@
         <item
             android:id="@id/nav_1"
             android:icon="@drawable/dlc_l"
-            android:title="Daily Check" />
+            android:title="@string/daily_check" />
         <item
             android:id="@+id/nav_2"
             android:icon="@drawable/ecg_l"
-            android:title="ECG Recorder" />
+            android:title="@string/ecg_recorder" />
         <item
             android:id="@+id/nav_3"
             android:icon="@drawable/spo2_l"
-            android:title="Pulse Oximeter" />
+            android:title="@string/pulse_oximeter" />
         <item
             android:id="@+id/nav_4"
             android:icon="@drawable/temp_l"
-            android:title="Thermometer" />
+            android:title="@string/thermometer" />
         <item
             android:id="@+id/nav_5"
             android:icon="@drawable/step_l"
-            android:title="Pedometer" />
+            android:title="@string/pedometer" />
         <item
             android:id="@+id/nav_51"
             android:icon="@drawable/slm_l"
-            android:title="Sleep Monitor" />
+            android:title="@string/sleep_monitor" />
         <item
             android:id="@+id/nav_6"
             android:icon="@drawable/update_l"
-            android:title="My Device" />
+            android:title="@string/my_device" />
         <item
             android:id="@+id/nav_7"
             android:icon="@drawable/about_l"
-            android:title="About" />
+            android:title="@string/about" />
 
 
     </group>
