--- a/app/src/main/res/layout/item_ecg.xml
+++ b/app/src/main/res/layout/item_ecg.xml
@@ -13,12 +13,11 @@
         android:orientation="horizontal">
 
 
-
         <TextView
-            android:layout_centerInParent="true"
             android:id="@+id/way"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_centerInParent="true"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="22sp" />
@@ -30,6 +29,14 @@
             android:layout_toStartOf="@+id/way"
             android:padding="10dp"
             android:src="@drawable/ico1" />
+        <ImageView
+            android:id="@+id/download"
+            android:layout_width="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"
+            android:layout_alignParentBottom="true"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_baseline_arrow_circle_down_24" />
     </RelativeLayout>
 
     <TextView
