--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -10,33 +10,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.MyApplication.AppBarOverlay">
+
         <RelativeLayout
-            android:background="#00000000"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="?attr/actionBarSize"
+            android:background="#00000000">
+
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="#ff000000"
                 app:popupTheme="@style/Theme.MyApplication.PopupOverlay" />
+
             <ImageView
-                android:layout_alignParentEnd="true"
                 android:id="@+id/icon_sync"
-                android:padding="10dp"
                 android:layout_width="50dp"
-                android:layout_height="?attr/actionBarSize"/>
+                android:layout_height="?attr/actionBarSize"
+                android:layout_alignParentEnd="true"
+                android:padding="10dp" />
+
             <TextView
                 android:id="@+id/userTop"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:padding="10dp"
-                android:layout_toStartOf="@+id/icon_sync"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@+id/icon_sync"
+                android:padding="10dp"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
 
         </RelativeLayout>
-
 
 
     </com.google.android.material.appbar.AppBarLayout>
