--- a/app/src/main/res/layout/fragment_ecg.xml
+++ b/app/src/main/res/layout/fragment_ecg.xml
@@ -45,7 +45,6 @@
 
             <TextView
                 android:id="@+id/ecg_button"
-                android:visibility="gone"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
@@ -53,7 +52,8 @@
                 android:padding="7dp"
                 android:text="ECG"
                 android:textColor="#ffffffff"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/o2button"
