--- a/app/src/main/res/layout/fragment_ecg.xml
+++ b/app/src/main/res/layout/fragment_ecg.xml
@@ -8,6 +8,7 @@
 
     <ProgressBar
         android:id="@+id/pro"
+        android:visibility="gone"
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp"
