--- a/app/src/main/res/layout/fragment_ecg.xml
+++ b/app/src/main/res/layout/fragment_ecg.xml
@@ -13,6 +13,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
