--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/dlc_l"
             android:title="@string/daily_check" />
         <item
+            android:id="@id/bpFragment"
+            android:icon="@drawable/dlc_l"
+            android:title="Blood Pressure" />
+        <item
             android:id="@+id/nav_2"
             android:icon="@drawable/ecg_l"
             android:title="@string/ecg_recorder" />
