--- a/app/src/main/res/layout/item_ped.xml
+++ b/app/src/main/res/layout/item_ped.xml
@@ -113,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="@string/min"
+            android:text="s"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
